--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/x-date-pickers": "^7.22.3",
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-query": "^5.61.0",
+    "@vercel/analytics": "^1.4.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.460.0",
     "rbac-event": "file:",
